# FastAPI-Template

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  fabfile.py  main.py  makefile  pyproject.toml
.envs/local/: .env.app  .env.atlas  .env.database  .env.minio  .env.redis
config/atlas/: atlas.hcl
docker/: Dockerfile.app
docker/app/: .dockerignore  Dockerfile  entrypoint.sh
docker/liquibase/: Dockerfile
infra/docker/app/: Dockerfile  entrypoint.sh
profiles/dev/: .env.app  .env.database  .env.liquibase
profiles/prod/: .env.app  .env.database
profiles/staging/: .env.app  .env.database
schema/: init-db.sql
script/cronjob/: backup.sh
src/: __init__.py  main.py
src/core/: database.py  logger.py  manager.py  response.py  router.py
src/utils/: filter.py  sanitizer.py  serializer.py
