[tool.poetry]
name = "c54"
version = "0.1.0"
description = ""
authors = ["Hordunlarmy <Hordunlarmy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
fastapi = "^0.115.11"
python-decouple = "^3.8"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
