[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["hordunlarmy <hordunlarmy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["uvicorn"], version = "^0.119.1"}
oguild = "^0.1.12"
python-decouple = "^3.8"
uvicorn = "^0.38.0"
itsdangerous = "^2.2.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
